<resources>
    <string name="app_name">Composition</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_logo">Welcome logo</string>
    <string name="game_rules">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостающее число.</string>
    <string name="number_composition">Состав числа</string>
    <string name="understand">Понятно</string>
    <string name="choose_level">Выберите уровень:</string>
    <string name="tst_level">Тестовый</string>
    <string name="easy_level">Легкий</string>
    <string name="normal_level">Средний</string>
    <string name="hard_level">Тяжелый</string>
    <string name="question_mark">\?</string>
    <string name="progress_answers">Правильных ответов: %s (минимум %s)</string>
    <string name="required_answers">Необходимое количество правильных ответов: %s</string>
    <string name="your_score">Ваш счет: %s</string>
    <string name="required_answers_percentage">Необходимый процент правильных ответов: %s</string>
    <string name="your_answers_percentage">Процент правильных ответов: %s</string>
    <string name="try_again">Попробовать снова</string>
</resources>